Add second banner of the website
Added images and aligned the heading, images and subtext according to the requirement

	new file:   .gitignore
	new file:   images/JS.png
	new file:   images/Meta-Logo-2048x1152.png
	new file:   images/css.png
	new file:   images/html.png
	new file:   images/html.webp
	new file:   images/ruby.png
	modified:   index.html
	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header-banner">
         <div class="Header-First-Row"> 
             <div class="sub-banner1">
-                <h4>Header Logo</h4>
+                <!-- <h4>Header Logo</h4> -->
+                <img src="images/Meta-Logo-2048x1152.png" class="image" style="height: 100px; width: 200px;">
             </div>
             <div class="sub-banner2">
                 <h5>header link one</h5>
@@ -37,6 +38,46 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="second-banner">
+        <div class="second-banner-header">
+            <h2>Career Path</h2>
+        </div>
+        <div class="second-banner-thread">
+            <div class="image-text">
+                <div class="bimg">
+                    <!-- <p>image1</p> -->
+                    <img src="images/html.png" class="image" style="height: 190px; width: 220px;">
+                </div>
+                <div class="btext">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="image-text">
+                <div class="bimg">
+                    <img src="images/css.png" class="image" style="height: 190px; width: 220px;">
+                </div>
+                <div class="btext">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="image-text">
+                <div class="bimg">
+                    <img src="images/JS.png" class="image" style="height: 190px; width: 200px;">
+                </div>
+               <div class="btext"> 
+                    <p>this is some subtext under an illustration or image</p>
+               </div>
+            </div>
+            <div class="image-text">
+                <div class="bimg">
+                    <img src="images/ruby.png" class="image" style="height: 190px; width: 190px;">
+                </div>
+                <div class="btext">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                
+            </div>
         </div>
     </div>
 </body>
