Add third and fourth banners to the website
Added the third and fourth banners and all the style elements

Changes to be committed:
	modified:   index.html
	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <img src="images/html.png" class="image" style="height: 190px; width: 220px;">
                 </div>
                 <div class="btext">
-                    <p>this is some subtext under an illustration or image</p>
+                    <p>HTML5 is the latest version of the HyperText Markup Language that can be referred to the WWW (World Wide Web) primary language</p>
                 </div>
             </div>
             <div class="image-text">
@@ -58,7 +58,7 @@
                     <img src="images/css.png" class="image" style="height: 190px; width: 220px;">
                 </div>
                 <div class="btext">
-                    <p>this is some subtext under an illustration or image</p>
+                    <p>CSS (Cascading Style Sheets) is used to style and layout web pages</p>
                 </div>
             </div>
             <div class="image-text">
@@ -66,7 +66,7 @@
                     <img src="images/JS.png" class="image" style="height: 190px; width: 200px;">
                 </div>
                <div class="btext"> 
-                    <p>this is some subtext under an illustration or image</p>
+                    <p>JavaScript is a scripting language that enables you to create dynamically updating content, control multimedia, animate images, and pretty much everything else.</p>
                </div>
             </div>
             <div class="image-text">
@@ -74,9 +74,38 @@
                     <img src="images/ruby.png" class="image" style="height: 190px; width: 190px;">
                 </div>
                 <div class="btext">
-                    <p>this is some subtext under an illustration or image</p>
+                    <p>Ruby on Rails (or "Rails") is an open-source web application development framework written in the Ruby programming language.</p>
                 </div>
                 
+            </div>
+        </div>
+    </div>
+    <div class="third-banner">
+        <div class="quote-text">
+            <div class="quote-para">
+                <p>“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.”</p>
+            </div>
+        </div>
+        <div class="author">
+            <div class="author-name">
+                <p>- Martin Fowler</p>
+            </div>
+        </div>
+    </div>
+    <div class="fourth-banner">
+        <div class="banner-border">
+            <div class="left-text">
+                <div class="left-header">
+                    <p>Call to action! It's time!</p>
+                </div>
+                <div class="left-subtext">
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+            </div>
+            <div class="signup-button">
+                <div class="sign">
+                    <button style=" border: 3px solid #E5E7EB;">Sign up</button>
+                </div>
             </div>
         </div>
     </div>
