Fix gap between the logo and headers

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <img src="images/Meta-Logo-2048x1152.png" class="image" style="height: 100px; width: 200px;">
             </div>
             <div class="sub-banner2">
-                <h5>header link one</h5>
-                <h5>header link two</h5>
-                <h5>header link three</h5>
+                <h5>Courses</h5>
+                <h5>Program Schedule</h5>
+                <h5>Contact us</h5>
             </div>
         </div>
         <div class="Details-and-Button">
